# JanusAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  agent.yaml  llm.yaml  loader.py  mcp.yaml  tools.yaml
janus_agent/: __init__.py
janus_agent/core/: __init__.py  agent.py  edges.py  exceptions.py  graph.py  nodes.py  state.py  types.py
janus_agent/core/tools/: __init__.py  converters.py  manager.py
janus_agent/llm/: __init__.py  base.py  loader.py
janus_agent/llm/prompts/: __init__.py  agent_system.md  pentest_agent.md  task_planner.md
janus_agent/llm/providers/: __init__.py  anthropic.py  localhost.py  openai.py  openai_compatible.py
janus_mcp/: __init__.py  dispatcher.py  manager.py
janus_mcp/client/: __init__.py  client.py  config.py  exceptions.py  protocol.py  session.py  tools.py
janus_mcp/client/transport/: __init__.py  base.py  http.py  stdio.py
janus_mcp/servers/: __init__.py
janus_mcp/servers/sandbox/: __main__.py  app.py  config.py
janus_mcp/servers/sandbox/managers/: __init__.py  browser_manager.py  kernel_manager.py  knowledge_manager.py  note_manager.py
janus_mcp/servers/sandbox/tools/: __init__.py  browser.py  code_executor.py  knowledge.py  note.py
test/: test_janus_agent.py  test_llm_providers.py  test_sandbox_client.py  test_tools.py
tools/: __init__.py  browser.py  config.py  exceptions.py  executor.py  note.py  terminal.py  utils.py
